Refactoring + edge and node representation + alteration of model + save supported (need work)